vice-president/example/vice-presidential-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    vice-president: "true"
  name: vice-presidential-ingress
  namespace: vice-president
spec:
  rules:
  - host: vice.president.com
    http:
      paths:
      - backend:
          serviceName: vice-president
          servicePort: 80
        path: /
  tls:
  - hosts:
    - vice.president.com
    secretName: vice-presidential-secret
